img distortion resolved

--- a/style.css
+++ b/style.css
@@ -156,5 +156,7 @@ input::placeholder {
   .hero_img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: revert;
   }
 }
